# Geo

./: CMakeLists.txt  Readme.md
GeoUtil/: CMakeLists.txt  GeoUtil.cpp  GeoUtil.h
include/: coordinate.hpp  dms.hpp  elevation.hpp  functions.hpp  latitude.hpp  location.hpp  longitude.hpp
lib/: CMakeLists.txt
src/: coordinate.cpp  elevation.cpp  functions.cpp  latitude.cpp  location.cpp  longitude.cpp
test/: elevation_unittest.cpp  functions_unittest.cpp  latitude_unittest.cpp  longitude_unittest.cpp
